...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="8dp">

        <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                android:id="@+id/txt_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:customFontName="@string/font_roboto_regular"/>

        <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontButton
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorGreen01"
                android:gravity="center"
                android:text="@string/txt_ok"
                android:textColor="@android:color/white"
...
