...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <android.support.v7.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:background="@drawable/drawable_round_corner"
                    app:iconifiedByDefault="false"
                    app:searchIcon="@null"
                    app:queryHint="@string/txt_type_something_here"
...
